--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <title>Dictionary App 📙</title>
 </head>
 <body>
+    <div class="container">
+       <div class="search-box">
+            <input type="text" placeholder="Type the word here..." id="input-word">
+            <button id="search-btn">Search</button>
+       </div> 
+    </div>
     <script src="js/app.js"></script>
 </body>
 </html>
