--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="word">
             <h3>Sample</h3>
             <button>
-                <i class="fa-solid fa-volume"></i>
+               <i class="fa-solid fa-volume-high"></i>
             </button>
         </div>
        </div> 
