--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                <i class="fa-solid fa-volume-high"></i>
             </button>
         </div>
+        <div class="details">
+            <p>pos</p>
+            <p>/sample/</p>
+        </div>
        </div> 
     </div>
     <script src="js/app.js"></script>
