--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <p>pos</p>
             <p>/sample/</p>
         </div>
+        <p class="word-meaning">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, sunt.
+        </p>
+        <p class="word-example">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, illum!</p>
        </div> 
     </div>
     <script src="js/app.js"></script>
