--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Dictionary App 📙</title>
 </head>
 <body>
+    <audio src="" id="sound"></audio>
     <div class="container">
        <div class="search-box">
             <input type="text" placeholder="Type the word here..." id="input-word">
