--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input type="text" placeholder="Type the word here..." id="input-word">
             <button id="search-btn">Search</button>
        </div>
-       <div class="result">
+       <div class="result" id="result">
         <div class="word">
             <h3>Sample</h3>
             <button>
